Refactor HTTP response handling with flexible condition-based resolver
Replace ResponseSuccessCriteria with HttpResponseResolver pattern for more flexible and reusable HTTP response handling.

## Key Changes

### New Components
- **HttpResponseResolveConfig**: Single configuration for response condition matching
  - Conditions using ConditionDefinition (path, operation, value)
  - Match mode (ALL/ANY) for combining conditions
  - Mapped status code for internal status mapping

- **HttpResponseResolveConfigs**: Container for multiple resolve configurations
  - Evaluates configs in order, first match wins
  - Empty-safe with default fallback behavior

- **HttpResponseResolver**: Centralized response resolution logic
  - Creates result context with status_code, response_headers, response_body
  - Uses ConditionEvaluator for flexible condition matching
  - Maps external responses to internal status codes

### Condition Framework
- Moved condition-related classes to dedicated package
  - ConditionDefinition (previously ResponseCondition)
  - ConditionEvaluator (new)
  - ConditionMatchMode (moved from http package)

### Integration
- Updated HttpRequestExecutionConfig to support response_resolve_configs
- Integrated HttpResponseResolver into HttpRequestExecutor
- Removed deprecated ResponseSuccessCriteria implementation

### Test Updates
- Migrated E2E tests to use response_resolve_configs
- Added integration tests for condition-based response handling
- Verified retry functionality with new resolver pattern

## Benefits
- **Flexible**: JSONPath-based conditions support complex response evaluation
- **Reusable**: Same resolver pattern for all HTTP response handling
- **Maintainable**: Clear separation of concerns (Config → Resolver → Result)
- **Testable**: Condition evaluation isolated and independently testable

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>